# web_workshop_backend

./: .env  Cargo.toml  README.md
migrations/: 20231127090441_create_table.sql  20231127091633_create_user.sql
src/: connect_database.rs  get_thread.rs  lib.rs  login.rs  main.rs  make_thread.rs
